# annotation_player

./: CMakeLists.txt  README.md  main.cpp  videoplayer.cpp  videoplayer.h  videowidget.pro
